force-app/main/default/objects/ServiceResource/fields/DistribuicaoDeVisita__c.field-meta.xml
<CustomField>
    <fullName>DistribuicaoDeVisita__c</fullName>
    <formula>IF( Name = Owner:User.Username ,  Owner:User.DistribuicaoVisita__c , &apos;NÃO ENCONTRADO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribuição de Visita</label>
    <type>Text</type>
</CustomField>