force-app/main/default/objects/ServiceResource/fields/EmailAtrasoJornadaTrabalho__c.field-meta.xml
<CustomField>
    <fullName>EmailAtrasoJornadaTrabalho__c</fullName>
    <label>E-mail para atraso jornada de trabalho</label>
    <type>Email</type>
</CustomField>