force-app/main/default/objects/ServiceResource/fields/Foto__c.field-meta.xml
<CustomField>
    <fullName>Foto__c</fullName>
    <description>Campo para inserção das fotografias dos Corretores Unimed</description>
    <inlineHelpText>Informe a url referente a foto deste colaborador.</inlineHelpText>
    <label>Foto</label>
    <type>Url</type>
</CustomField>