force-app/main/default/objects/ServiceResource/fields/FSL__Online_Offset__c.field-meta.xml
<CustomField>
    <fullName>FSL__Online_Offset__c</fullName>
    <description>Online offset in minutes</description>
    <label>Online Offset</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>