force-app/main/default/objects/ServiceResource/fields/FSL__Travel_Speed__c.field-meta.xml
<CustomField>
    <fullName>FSL__Travel_Speed__c</fullName>
    <label>Travel Speed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>