force-app/main/default/objects/ServiceResource/fields/GerenteResponsavel__c.field-meta.xml
<CustomField>
    <fullName>GerenteResponsavel__c</fullName>
    <label>Gerente Responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>