force-app/main/default/objects/ServiceResource/fields/MinutosUltimaLocalizacao__c.field-meta.xml
<CustomField>
    <fullName>MinutosUltimaLocalizacao__c</fullName>
    <formula>IF(
NOW() - LastKnownLocationDate &gt; 0 ,
(NOW() - LastKnownLocationDate ) * 24 * 60,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutos da Última Localização</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>