force-app/main/default/objects/ServiceResource/fields/Subordinado__c.field-meta.xml
<CustomField>
    <fullName>Subordinado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subordinado A</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RecursosServicos</relationshipName>
    <type>Lookup</type>
</CustomField>