force-app/main/default/objects/ServiceResource/fields/TelefoneConsultor__c.field-meta.xml
<CustomField>
    <fullName>TelefoneConsultor__c</fullName>
    <label>Telefone do Consultor</label>
    <length>16</length>
    <type>Text</type>
</CustomField>