force-app/main/default/objects/ServiceResource/validationRules/VerificacaoValorTecnico.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificacaoValorTecnico</fullName>
    <active>true</active>
    <description>Campo padrão do sistema, manter o valor padrão: Técnico.</description>
    <errorConditionFormula>NOT(ISPICKVAL(ResourceType , &apos;T&apos;))</errorConditionFormula>
    <errorDisplayField>ResourceType</errorDisplayField>
    <errorMessage>Campo padrão do sistema, manter o valor padrão: Técnico.</errorMessage>
</ValidationRule>