force-app/main/default/objects/ServiceResource/listViews/All_ServiceResources.listView-meta.xml
<ListView>
    <fullName>All_ServiceResources</fullName>
    <filterScope>Everything</filterScope>
    <label>Todos os Recursos de serviços</label>
</ListView>