force-app/main/default/objects/ServiceResource/listViews/My_ServiceResources.listView-meta.xml
<ListView>
    <fullName>My_ServiceResources</fullName>
    <filterScope>Mine</filterScope>
    <label>Meus Recursos de serviços</label>
</ListView>